[package]
name = "treasury-reward"
version = "0.1.0"
authors = ["Drew Stone <drewstone329@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.3", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.3", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.3", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.3", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.3", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.3", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.3", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.3", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",
]