[package]
name = "hedgeware-rpc-debug"
version = '0.1.0'
authors = ['PureStake']
edition = '2018'
homepage = 'https://edgewa.re'
license = 'GPL-3.0-only'
repository = 'https://github.com/PureStake/moonbeam/'

[dependencies]
tokio = { version = "0.2.21", features = ["sync", "time"] }
futures = { version = "0.3", features = ["compat"] }
jsonrpc-core = "15.0.0"

ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = "0.11.0"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }

hedgeware-rpc-core-debug = { path = "../../rpc-core/debug" }
hedgeware-rpc-primitives-debug = { path = "../../../rpc-primitives/debug" }
fc-consensus = { git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.7" }
fc-db = { git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.7" }
fc-rpc = { git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.7" }
fp-rpc = { git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.7" }
